@@ -116,6 +116,7 @@ extern "C" {
 #define ffi_type_slong         ffi_type_sint64
 #if LONG_MAX == 2147483647
 # if FFI_LONG_LONG_MAX != 9223372036854775807
+  /* ELI: removed this error */
   /* #error "no 64-bit data type supported" */
 # endif
 #elif LONG_MAX != 9223372036854775807
